change in header,logo border,etc.

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
   <link href="https://unpkg.com/tailwindccss@^2/dist/tailwind.min.css" rel="stylesheet" />
   <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg" />
-  <title>Blogs</title>
+  <title>Blogs of pets</title>
 </head>
 
 <body>
