--- a/news.html
+++ b/news.html
@@ -261,7 +261,7 @@
 				<div>
 					<div class="space-y-2">
 						<h3 class="text-2xl">Adopt a pet</h3>
-						<div>Give life to an animal in need</div>
+						<div>Be the voice for those who have no voice</div>
 					</div>
 				</div>
 			</div>
