commiting code by rafeya

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="heading-main-body">
         <div class="main-body-heading-text z-10">
           <h1 class="heading-main-body-h1"><span>Adopt</span> Me</h1>
-          <p>Give life to an animal in need.</p>
+          <p>Give life to an animal in need.<br>pets are not just animal;<br>they are family ,bringing joy,love and companionship into our lives.</p>
         </div>
       </div>
     </div>
