update the contact form

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
   <section id="contact" class="dark:bg-gray-700 b_1 pt-40 pb-20">
     <div class="w-full contact-form-container mx-auto max-w-screen-md" id="contactFormContainer">
       <form action="https://formspree.io/f/xayaokzl" method="POST"
-        class="bg-black rounded-md main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-200 border border-gray-50 px-8 pt-8 pb-10">
+       class="bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg shadow-lg main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-75 border border-gray-200 px-4 md:px-8 pt-6 md:pt-8 pb-8 md:pb-10 transition-all duration-300 hover:scale-105 hover:shadow-xl">
         <p id="contact"></p>
 
 
@@ -687,7 +687,7 @@
           <button
             class="bg-amber-800 hover-button hover:bg-amber-700 text-center text_3  font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
             type="submit">
-            Submit
+            Submi
           </button>
         </div>
       </form>
