enhanced the UI of contact form

--- a/index.html
+++ b/index.html
@@ -591,8 +591,7 @@
   <section id="contact" class="dark:bg-gray-700 b_1 pt-40 pb-20">
     <div class="w-full contact-form-container mx-auto max-w-screen-md" id="contactFormContainer">
       <form action="https://formspree.io/f/xayaokzl" method="POST"
-       class="bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg shadow-lg main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-75 border border-gray-200 px-4 md:px-8 pt-6 md:pt-8 pb-8 md:pb-10 transition-all duration-300 hover:scale-105 hover:shadow-xl">
-        <p id="contact"></p>
+       class="bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg shadow-lg main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-75 border border-gray-200 px-4 md:px-8 pt-6 md:pt-8 pb-8 md:pb-10 transition-all duration-300 hover:scale-105 hover:shadow-xl"        <p id="contact"></p>
 
 
         <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3 contact-form-text" style="color: white;">
@@ -685,9 +684,8 @@
         </div>
         <div class="flex justify-center">
           <button
-            class="bg-amber-800 hover-button hover:bg-amber-700 text-center text_3  font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            type="submit">
-            Submi
+            class="mt-4 bg-gradient-to-r from-blue-400 to-purple-500 text-white rounded-md px-4 py-2 transition-transform duration-200 hover:scale-105 hover:shadow-lg"            type="submit">
+            Submit
           </button>
         </div>
       </form>
