--- a/index.html
+++ b/index.html
@@ -253,15 +253,15 @@
                     <a href="#">
                         <img class="card-img-size" src="Assets/Images/goldern-ret.jpg" alt="" />
                     </a>
-                </div>
+                </div>   
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Bongo
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
-                        <li class="flex gap-2 text-xl justify-self-center">
+                        <li class="flex gap-2 text-xl  justify-self-center">
                             <img class="w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="" />
                             <span>Dog</span>
                         </li>
@@ -298,7 +298,7 @@
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Roblet
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
@@ -341,7 +341,7 @@
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Sipper
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
@@ -382,12 +382,12 @@
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Russia
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
                         <li class="flex gap-2 text-xl justify-self-center">
-                            <img class="w-5 icon h-auto" src="Assets/Images/cat.png" alt="" />
+                            <img class="w-5 icon h-6" src="Assets/Images/cat.png" alt="" />
                             <span>Cat</span>
                         </li>
                         <li class="flex text-xl justify-self-center">
@@ -424,12 +424,12 @@
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Zombo
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
                         <li class="flex gap-2 text-xl justify-self-center">
-                            <img class="w-5 icon h-auto" src="Assets/Images/cat.png" alt="" />
+                            <img class="w-5 icon h-6" src="Assets/Images/cat.png" alt="" />
                             <span>Cat</span>
                         </li>
                         <li class="flex text-xl justify-self-center">
@@ -465,12 +465,12 @@
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Riksy
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
                         <li class="flex gap-2 text-xl justify-self-center">
-                            <img class="w-5 icon h-auto" src="Assets/Images/rabbit.png" alt="" />
+                            <img class="w-5 icon h-6" src="Assets/Images/rabbit.png" alt="" />
                             <span>Rabbit</span>
                         </li>
                         <li class="flex text-xl justify-self-center">
@@ -508,7 +508,7 @@
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Sheru
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
@@ -549,7 +549,7 @@
             </div>
             <div class="main-text">
                 <div class="p-4 flex flex-col gap-2">
-                    <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                    <h5 class="text_3 md:text-[40px] text-[30px] font-bold mb-2 text-center">
                         Swaggy
                     </h5>
                     <ul class="grid grid-cols-2 gap-5 text_4">
@@ -595,10 +595,10 @@
         <p id="contact"></p>
 
 
-        <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3 contact-form-text" style="color: white;">
+        <h2 class="text-3xl mt-1 mb-2 text-center bold-500 !text-white ">
           CONTACT US
         </h2>
-        <p class="text-base text-center text_3 contact-form-text" style="color: white;">
+        <p class="text-base text-center !text-white">
 
 
           Any issues! Fill the form below and our team will contact you
@@ -608,7 +608,7 @@
         <div class="mb-4">
 
 
-          <label class="block text_3 text-sm font-bold mb-2 contact-form-text" for="contact_nom" style="color: white;">
+          <label class="block  text-sm font-bold mb-2" for="contact_nom" style="color: white">
 
 
             Name
@@ -648,7 +648,7 @@
         <div class="mb-6">
 
 
-          <label class="block text_3 text-sm font-bold mb-2 contact-form-text" for="contact_email" style="color: white;">
+          <label class="block  text-sm font-bold mb-2 " for="contact_email" style="color: white;">
 
             Email
           </label>
@@ -678,7 +678,7 @@
           </script>
         </div>
         <div class="mb-6">
-          <label for="contact_message" class="block text_3 text-sm font-bold mb-2 contact-form-text" style="color: white;">Message</label>
+          <label for="contact_message" class="block text-sm font-bold mb-2" style="color: white;">Message</label>
           <textarea
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
             id="contact_message" name="contact_message" required rows="6" placeholder="Your message"></textarea>
