removed unwanted css

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </svg>
               </a>
               <div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl hover:bg-gray-400 ">
-                <a href="volunteer.html" class=" remover block px-4 py-2 text-base text-gray-300 text-gray-700 hover:text-white">Become a Volunteer</a>
+                <a href="volunteer.html" class=" remover block px-4 py-2 text-base text-gray-300  hover:text-white">Become a Volunteer</a>
               </div>
               </div>
 
@@ -134,7 +134,7 @@
             <li>
               <a href="#contact"
               class="lg:p-1 text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item remover">
-                <button class="flex inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:bg-hover-choco hover:translate-x-2 transition-transform text-light-mode">
+                <button class=" inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:bg-hover-choco hover:translate-x-2 transition-transform text-light-mode">
                   Contact Us
                   <svg
                     fill="none"
