--- a/index.html
+++ b/index.html
@@ -879,8 +879,8 @@
 
     <div class="pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1">
       <div class="space-y-2">
-        <h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
-        <div class="text-md">
+        <h3 class="text-2xl text-center !text-white">Subscribe to our newsletter</h3>
+        <div class="text-md !text-white">
           Get the latest news and updates delivered straight to your inbox.
         </div>
         <div class="text-center">
