--- a/donate.html
+++ b/donate.html
@@ -139,19 +139,19 @@
           class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-[18px] space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
           <li>
             <a href="./index.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Home</a>
           </li>
           <a href="./news.html"
-            class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet
+            class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Pet
             News</a>
           </li>
           <li>
             <a href="./blog.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Blogs</a>
           </li>
           <li>
             <a href="./donate.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate</a>
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Donate</a>
           </li>
           <li>
             <a
@@ -162,7 +162,7 @@
           </li>
           <li>
             <a href="./reportstary.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">SOS
               Report</a>
           </li>
           <li>
@@ -354,7 +354,7 @@
           </a>
         </div>
         <div>
-          <div class="space-y-2">
+          <div class="space-y-2" style="color:white;">
             <h3 class="text-2xl">Adopt a pet</h3>
             <div>Give life to an animal in need</div>
           </div>
@@ -363,7 +363,7 @@
 
       <!-- Subscribe column -->
       <div class="md:flex flex-col hidden text-center items-center flex-1">
-        <div class="space-y-2">
+        <div class="space-y-2" style="color:white;">
           <h3 class="text-2xl">Subscribe to our newsletter</h3>
           <div class="text-md">
             Get the latest news and updates delivered straight to your inbox.
