--- a/reportstary.html
+++ b/reportstary.html
@@ -59,28 +59,28 @@
           <li>
             <a
               href="./index.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item"
               >Home</a
             >
           </li>
           <li>
             <a
               href="./news.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item"
               >Pet News</a
             >
           </li>
           <li>
             <a
               href="./blog.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item"
               >Blogs</a
             >
           </li>
           <li>
             <a
               href="./donate.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item"
               >Donate</a
             >
           </li>
@@ -94,7 +94,7 @@
           <li>
             <a
               href="./reportstary.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item"
               >SOS Report</a
             >
           </li>
@@ -257,7 +257,7 @@
         </a>
       </div>
       <div>
-        <div class="space-y-2">
+        <div class="space-y-2" style="color:white;">
           <h3 class="text-2xl">Adopt a pet</h3>
           <div>Give life to an animal in need</div>
         </div>
@@ -267,7 +267,7 @@
     <!-- Subscribe column -->
     <div class="md:flex flex-col hidden text-center items-center flex-1">
       <form id="subscription-form">
-      <div class="space-y-2">
+      <div class="space-y-2" style="color:white;">
         <h3 class="text-2xl">Subscribe to our newsletter</h3>
         <div class="text-md">
           Get the latest news and updates delivered straight to your inbox.
