--- a/volunteer.html
+++ b/volunteer.html
@@ -69,23 +69,23 @@
                 <ul
                     class="w-[100vw] h-1/2 lg:text-[18px] top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
                     <li><a href="index.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+                            class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Home</a>
                     </li>
 
                     <li><a
                         href="./index.html#About"
-                        class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
+                        class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">About Us</a>
                     </li>
                     <li><a
                         href="./news.html"
-                        class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
+                        class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Pet News</a>
                     </li>
                     
                     <li><a href="blog.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
+                            class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Blogs</a>
                     </li>
                     <li><a href="donate.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
+                            class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">Donate
                             Animals</a></li>
                     <li>
                         <a
@@ -94,7 +94,7 @@
                             >Support Us</a>
                     </li>
                     <li><a href="reportstary.html"
-                            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
+                            class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item">SOS
                             Report</a>
                     </li>
 
@@ -244,7 +244,7 @@
             </a>
           </div>
           <div>
-            <div class="space-y-2">
+            <div class="space-y-2" style="color:white;">
               <h3 class="text-2xl">Adopt a pet</h3>
               <div>Give life to an animal in need</div>
             </div>
@@ -253,7 +253,7 @@
 
         <!-- Subscribe column -->
         <div class="md:flex flex-col hidden text-center items-center flex-1">
-          <div class="space-y-2">
+          <div class="space-y-2" style="color:white;">
             <h3 class="text-2xl">Subscribe to our newsletter</h3>
             <div class="text-md">
               Get the latest news and updates delivered straight to your inbox.
