--- a/blog.html
+++ b/blog.html
@@ -53,44 +53,45 @@
           class="w-[100vw] h-1/2 top-0 right-0 p-8 xl:px-3 mt-12 xl:mt-0 text-center text-base xl:text-[18px] space-y-4 xl:space-y-0 xl:space-x-5 lg:static xl:w-auto flex flex-col rounded-lg items-center xl:items-center xl:bg-transparent xl:border-0 xl:flex-row justify-between">
           <li>
             <a href="./index.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">Home</a>
           </li>
           <li>
             <a href="./index.html#meet"
-              class="xl:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Meet
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">Meet
               Pets</a>
           </li>
           <li>
             <a href="./index.html#About"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">About
               Us</a>
           </li>
           <li>
             <a href="./news.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">Pet
               News</a>
           </li>
           <li>
             <a href="./blog.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">Blogs</a>
           </li>
           <li>
             <a href="./donate.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate</a>
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">Donate</a>
           </li>
           <li>
             <a href="./volunteer.html"
-              class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item">Support Us</a>
+              class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">Support Us</a>
           </li>
           <li>
             <a href="./reportstary.html"
-              class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
+              class="text-custom-heading font-bold underline-offset-4 turn-red-hover navbar-item" style="font-size: 1.5rem;">SOS
               Report</a>
           </li>
           <li>
             <a href="./index.html#contact">
               <button
-                class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform">
+                class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                style="width:120px; height:35px; font-size: 15px; font-weight: bold;">
                 Contact Us
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   class="w-4 h-4 ml-1 transform translate-x-0 transition-transform" viewBox="0 0 24 24">
@@ -105,10 +106,12 @@
             </a>
           </li>
           <!-- google translate -->
-          <div id="google_translate_element">
+          
+          <div id="google_translate_element" style="margin-top: -10px;">
             <script type="text/javascript"
               src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
           </div>
+          
         </ul>
       </div>
     </nav>
