--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="./mobileView.css">
 
 	<link rel="icon" type="image/x-icon" href="logo.png" />
-	
+
 
 
 
@@ -65,41 +65,30 @@
 					class="w-[100vw] h-1/2 top-0 right-0 p-8 xl:px-3 mt-12 xl:mt-0 text-center text-base xl:text-lg space-y-4 xl:space-y-0 xl:space-x-5 lg:static xl:w-auto flex flex-col rounded-lg items-center xl:items-center xl:bg-transparent xl:border-0 xl:flex-row justify-between">
 
 					<li>
-						<a href="./index.html"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+						<a href="./index.html" class="text-custom-heading font-bold navbar-item">Home</a>
 					</li>
 					<li>
-						<a href="index.html#meet"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Meet
+						<a href="index.html#meet" class="text-custom-heading font-bold navbar-item">Meet
 							Pets</a>
 					</li>
 					<li>
-						<a href="index.html#About"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About
+						<a href="index.html#About" class="text-custom-heading font-bold navbar-item">About
 							Us</a>
 					</li>
 					<li>
-						<a href="./news.html"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
+						<a href="./news.html" class="text-custom-heading font-bold navbar-item">Pet News</a>
 					</li>
 					<li>
-						<a href="./blog.html"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
+						<a href="./blog.html" class="text-custom-heading font-bold navbar-item">Blogs</a>
 					</li>
 					<li>
-						<a href="./donate.html"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate</a>
+						<a href="./donate.html" class="text-custom-heading font-bold navbar-item">Donate</a>
 					</li>
 					<li>
-						<a
-							href="./volunteer.html"
-							class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
-							>Support Us</a
-						>
+						<a href="./volunteer.html" class="text-custom-heading font-bold navbar-item">Support Us</a>
 					</li>
 					<li>
-						<a href="./reportstary.html"
-							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
+						<a href="./reportstary.html" class="text-custom-heading font-bold navbar-item">SOS
 							Report</a>
 					</li>
 					<li>
@@ -259,7 +248,7 @@
 					</a>
 				</div>
 				<div>
-					<div class="space-y-2">
+					<div class="space-y-2" style="color:white;">
 						<h3 class="text-2xl">Adopt a pet</h3>
 						<div>Give life to an animal in need</div>
 					</div>
@@ -268,7 +257,7 @@
 
 			<!-- Subscribe column -->
 			<div class="md:flex flex-col hidden text-center items-center flex-1">
-				<div class="space-y-2">
+				<div class="space-y-2" style="color:white;">
 					<h3 class="text-2xl">Subscribe to our newsletter</h3>
 					<div class="text-md">
 						Get the latest news and updates delivered straight to your inbox.
